--- a/src/app/layouts/home/team/team.component.html
+++ b/src/app/layouts/home/team/team.component.html
@@ -24,7 +24,7 @@
 
       <div id="speakersCardRow" class="row">
         <div id="speakersCol" class="col-md-0 col-lg-2"></div>
-        <div class="col-md-6 col-lg-4 mb-4">
+        <div class="cardCol col-md-6 col-lg-4 mb-4">
             <div class="card">
                 <img id="valerioPhoto" src="../assets/img/foto-valerio-4.jpg" alt="Foto de Valerio">
                 <div class="card-body">
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 mb-4">
+        <div class="cardCol col-md-6 col-lg-4 mb-4">
             <div class="card">
                 <img src="../assets/img/foto-guillermo-2.jpg" alt="Foto de Guillermo">
                 <div class="card-body">
