--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
@@ -25,32 +25,33 @@
         <div class="row">
         
             <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
-            <div id="tenYearsExperienceLelftCol" class="title3" >
-
-              <p>
-                <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">AÑOS</span>
-              </p>
-              <br>
-              <p>
-                <span id="tenYearsExperience3Span">DE</span>
-              </p>
-              <br>
-              <p>
-                <span id="tenYearsExperience4Span">EXPERIENCIA</span>
-              </p>
-              <br>
-              <p>
-                <span id="tenYearsExperience5Span">PARA</span>
-              </p>
-              <br>
-              <p>
-                <span id="tenYearsExperience6Span">LA GLORIA</span>
-              </p>
-              <br>
-              <p>
-                <span id="tenYearsExperience7Span">DE DIOS</span>
-              </p>
-            
+            <div id="tenYearsExperienceLelftDiv" class="title3" >
+              
+                <div id="tenYearsExperienceLelftDivContainer">
+                    <p>
+                      <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">AÑOS</span>
+                    </p>
+                    <br>
+                    <p>
+                      <span id="tenYearsExperience3Span">DE</span>
+                    </p>
+                    <br>
+                    <p>
+                      <span id="tenYearsExperience4Span">EXPERIENCIA</span>
+                    </p>
+                    <br>
+                    <p>
+                      <span id="tenYearsExperience5Span">PARA</span>
+                    </p>
+                    <br>
+                    <p>
+                      <span id="tenYearsExperience6Span">LA GLORIA</span>
+                    </p>
+                    <br>
+                    <p>
+                      <span id="tenYearsExperience7Span">DE DIOS</span>
+                    </p>
+                </div>
 
               <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
               <!-- <div id="cellPhoneTenYearsExperienceTitle" class="col">
