--- a/src/app/layouts/home/currentyear-tour/currentyear-tour.component.scss
+++ b/src/app/layouts/home/currentyear-tour/currentyear-tour.component.scss
@@ -40,58 +40,63 @@
       }
   
       .row {
-        display: flex;
-        justify-content: center;
-  
-  
-        .imageContainer {
-          max-width: 350px;
-          padding: 0;
-          margin-left: 20px;
-          margin-right: 20px;
-          margin-bottom: 30px;
-        }
-  
-        .imageContainer img {
+
+          // display: flex;
+          justify-content: center;
           width: 100%;
-          height: auto;
-          display: block;
-  
-  
-          // border-radius: 12px;
-          // border: 6px double #d4af37; /* Borde dorado doble */
-          // background-color: #fff;
-          // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-          // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  
-  
-          // border: 6px solid #4CAF50; /* Color del marco */
-          // border-radius: 10px; /* Bordes redondeados */
-          // padding: 10px; /* Espacio entre el marco y la imagen */
-          // background-color: #ffffff; /* Fondo blanco detrás del marco */
-          // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
-          // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  
-  
-          border: 9px solid #fff; // Borde blanco
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
-          border-radius: 10px; // Bordes redondeados
-          transition: transform 0.3s ease, box-shadow 0.3s ease;
-  
-        
-          &:hover {
-            // transform: scale(1.05);
-            // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
-  
-            // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
-            // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
-  
-            transform: scale(1.05); // Efecto de zoom al pasar el mouse
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
-         
+          margin: 0 auto;
+          margin-bottom: 0px;
+          // padding: 0;
+    
+    
+          .imageContainer {
+              max-width: 350px;
+              padding: 0;
+              margin-left: 20px;
+              margin-right: 20px;
+              margin-bottom: 30px;
           }
-  
-        }
+    
+          .imageContainer img {
+              width: 100%;
+              height: auto;
+              display: block;
+      
+      
+              // border-radius: 12px;
+              // border: 6px double #d4af37; /* Borde dorado doble */
+              // background-color: #fff;
+              // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      
+      
+              // border: 6px solid #4CAF50; /* Color del marco */
+              // border-radius: 10px; /* Bordes redondeados */
+              // padding: 10px; /* Espacio entre el marco y la imagen */
+              // background-color: #ffffff; /* Fondo blanco detrás del marco */
+              // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Sombra para añadir elegancia */
+              // transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      
+      
+              border: 9px solid #fff; // Borde blanco
+              box-shadow: 0 4px 8px rgba(0, 0, 0, 0.986); // Sombra suave
+              border-radius: 10px; // Bordes redondeados
+              transition: transform 0.3s ease, box-shadow 0.3s ease;
+      
+            
+              &:hover {
+                  // transform: scale(1.05);
+                  // box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3);
+        
+                  // transform: scale(1.05); /* Efecto de zoom al pasar el ratón */
+                  // box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Más sombra al hacer hover */
+        
+                  transform: scale(1.05); // Efecto de zoom al pasar el mouse
+                  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); // Sombra más pronunciada al pasar e
+          
+              }
+    
+          }
   
       }
   
@@ -149,15 +154,52 @@
   
         .row {
           
-            display: flex;
+            // display: flex;
             justify-content: center;
+            width: 100%;
+            padding: 0;
+            margin: 0 auto;
+
+            // @media only screen and (max-width: 1046px) {
+            //   margin: 0px 0px;
+            // }
+
+            // @media only screen and (max-width: 868px) {
+            //   margin: 0px 30px;
+            //   // padding: 0px 20px;
+            // }
   
             .imageContainer {
-              max-width: 350px;
-              padding: 0;
-              margin-left: 20px;
-              margin-right: 20px;
-              margin-bottom: 30px;
+                // display: block;
+                width: 100%;
+                max-width: 350px;
+                margin-left: 0px;
+                margin-right: 0px;
+                margin-bottom: 30px;
+                // justify-content: center;
+
+                @media only screen and (max-width: 1046px) {
+                  padding-left: 20px;
+                  padding-right: 20px;
+                }
+
+                @media only screen and (max-width: 691px) {
+                  padding-left: 0px;
+                  padding-right: 0px;
+                }
+    
+                @media only screen and (max-width: 376px) {
+                  padding-left: 20px;
+                  padding-right: 20px;
+                  // padding: 0px 20px;
+                }
+    
+                // @media only screen and (max-width: 868px) {
+                //   margin-left: 30px;
+                //   margin-right: 30px;
+                //  // padding: 0px 20px;
+                // }
+
             }
   
             .imageContainer img {
