--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -1,4 +1,3 @@
-
   <!--======================================== -->
   <!--========= NORMAL SCREEN HEADER ========= -->
   <!--======================================== -->
@@ -7,8 +6,8 @@
     <ul>
       <li id="headerIconText">      
         <a id="normalScreenHeaderLogo" href="#">
-          <img id="normalScreenLogoImg" src="../assets/img/icon-6.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
-          <span id="normalScreenLogoText">MOVIMIENTO MISIONERO <br> GLOBAL</span>
+          <img id="normalScreenLogo" src="../assets/img/icon-6.png" alt="MOVIMIENTO MISIONERO GLOBAL" >
+          <span id="normalScreenText">MOVIMIENTO MISIONERO <br> GLOBAL</span>
         </a>
       </li>
       <li id="headerSpace">&nbsp;</li>
@@ -32,15 +31,15 @@
   <header class="cellPhoneHeaderClass headerText">
     <div id="cellPhoneHeaderRow" class="row">
 
-      <div id="cellPhoneHeaderLogoTit" class="col">
-        <a id="cellPhoneLogoHeader" href="#" >
-          <img id="cellPhoneLogoImg" src="../assets/img/icon-6.png" alt="GAMA EVANGELISTIC ASSOCIATION" >
-          <span id="cellPhoneLogoText">MOVIMIENTO  <br> MISIONERO <br> GLOBAL</span>
+      <div id="cellPhoneHeaderLeftSide" class="col">
+        <a id="cellPhoneHeaderLeftSideContainer" href="#" >
+          <img id="cellPhoneLogo" src="../assets/img/icon-6.png" alt="MOVIMIENTO MISIONERO GLOBAL" >
+          <span id="cellPhoneText">MOVIMIENTO  <br> MISIONERO <br> GLOBAL</span>
         </a>
       </div>
 
 
-      <div class="col" id="cellPhoneHeaderButtonDiv">
+      <div id="cellPhoneHeaderRightSide" class="col">
         <button mat-button [matMenuTriggerFor]="menu" id="cellPhoneHeaderButton"><mat-icon>menu</mat-icon></button>
         <mat-menu id="cellPhoneMenu" #menu="matMenu">
           <button mat-menu-item><a class="headerText" href="#identity">QUIÉNES SOMOS</a></button>
