--- a/src/app/layouts/home/team/team.component.scss
+++ b/src/app/layouts/home/team/team.component.scss
@@ -40,6 +40,7 @@
         .card {
   
           width: 100%;
+          height: 100%;
   
           .card-body {
   
@@ -75,9 +76,9 @@
                 margin: 8px 0px 15px 0px;
               }
   
-              #guillermoCardText {
-                padding-bottom: 20px;
-              }
+              // #guillermoCardText {
+                // padding-bottom: 20px;
+              // }
   
   
           } //end card-body
@@ -127,53 +128,68 @@
       } 
   
       #speakersCardRow {
-  
-        .card {
-  
-          width: 100%;
-  
-          .card-body {
-  
-              .card-body-title {
-                font-size: 18px;
-                margin-bottom: 6px;
-              }
-  
-              .custom-badge {
-                display: inline-block;
-                padding: 1px 5px;
-                font-size: 13px;
-                color: white;
-                border-radius: 4px;
-                text-align: center;
-                margin-right: 5px;
-                white-space: nowrap;
-              }
-  
-              .warning {
-                background-color: #f0ad4e; /* Color similar a "badge-warning" */
-              }
-              
-              .success {
-                background-color: #5cb85c; /* Color similar a "badge-success" */
-              }
-  
-              .info {
-                background-color: #5bc0de; /* Color similar a "badge-info" */
-              }
-  
-              hr {
-                margin: 8px 0px 15px 0px;
-              }
-  
-              #guillermoCardText {
-                padding-bottom: 20px;
-              }
-  
-  
-          } //end card-body
-  
-        } //end card
+
+        .cardCol {
+
+            @media only screen and (max-width: 623px) {
+              // width: 90%;
+              padding: 0px 30px;
+            }
+
+            @media only screen and (max-width: 378px) {
+              // width: 90%;
+              padding: 0px 20px;
+            }
+
+            .card {
+      
+              width: 100%;
+              height: 100%;
+      
+              .card-body {
+      
+                  .card-body-title {
+                    font-size: 18px;
+                    margin-bottom: 6px;
+                  }
+      
+                  .custom-badge {
+                    display: inline-block;
+                    padding: 1px 5px;
+                    font-size: 13px;
+                    color: white;
+                    border-radius: 4px;
+                    text-align: center;
+                    margin-right: 5px;
+                    white-space: nowrap;
+                  }
+      
+                  .warning {
+                    background-color: #f0ad4e; /* Color similar a "badge-warning" */
+                  }
+                  
+                  .success {
+                    background-color: #5cb85c; /* Color similar a "badge-success" */
+                  }
+      
+                  .info {
+                    background-color: #5bc0de; /* Color similar a "badge-info" */
+                  }
+      
+                  hr {
+                    margin: 8px 0px 15px 0px;
+                  }
+      
+                  // #guillermoCardText {
+                  //   padding-bottom: 20px;
+                  // }
+      
+      
+              } //end card-body
+      
+            } //end card
+
+        } //end cardCol
   
       } //end speakersCardRow
   
