--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -6,11 +6,11 @@
     <div class="container">
 
           <div class="col">
-            <p id="uneteMisionesTitleFirstLine">ÚNETE A LAS </p>
+            <p id="uneteMisionesTitleFirstLine" class="title2">ÚNETE A LAS </p>
             <br>
-            <p id="uneteMisionesTitleSecondLine">MISIONES</p>
+            <p id="uneteMisionesTitleSecondLine" class="title2">MISIONES</p>
           </div>
-          <p id="uneteMisionesDescParagraph">
+          <p id="uneteMisionesDescParagraph" class="text">
           <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
             Ponte en contacto con nosotros si te atrae la idea de participar en misiones, en colaboración con iglesias locales y JCUM.
           </p>
