--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
@@ -22,7 +22,7 @@
           padding: 0 20px;
   
           #uneteMisionesTitleFirstLine {
-            font-family: serif !important;
+            // font-family: serif !important;
             font-size: 1.3rem;
             color: #3f51b5;
             letter-spacing: 4px;
@@ -33,7 +33,7 @@
           } 
     
           #uneteMisionesTitleSecondLine {
-            font-family: serif !important;
+            // font-family: serif !important;
             font-size: 2.9rem;
             color:  var(--bs-dark-rgb);
             letter-spacing: 6px;
@@ -119,7 +119,7 @@
         padding: 0 20px;
   
         #uneteMisionesTitleFirstLine {
-          font-family: serif !important;
+          // font-family: serif !important;
           font-size: 1.3rem;
           color: #3f51b5;
           letter-spacing: 4px;
@@ -130,8 +130,8 @@
         } 
   
         #uneteMisionesTitleSecondLine {
-          font-family: serif !important;
-          font-size: 2.9rem;
+          // font-family: serif !important;
+          font-size: 2.7rem;
           color:  var(--bs-dark-rgb);
           letter-spacing: 6px;
           margin: 0 auto;
