--- a/src/app/layouts/home/identity/identity.component.scss
+++ b/src/app/layouts/home/identity/identity.component.scss
@@ -27,60 +27,130 @@
 
       .row { 
 
-          padding-bottom: 30px;
-
-          #significadoGAMA {
-
-            padding-left: 5%;
-
-            #identityTitleFirstLine {
-              font-size: 1.5rem;
-              color: #1e2757;
-              letter-spacing: 0px;
-              margin: 0 auto;
-              padding-bottom: 8px;
-              margin-bottom: 10px;
-            // font-weight: normal;
-            // font-family: YesevaOne-Regula !important;
-            // font-family: Arial, Helvetica, sans-serif !important;
-                  // font-family: monospace !important;
-            // font-family: cursive !important;
-            // font-family: OpenSans-Regular !important;
-            // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
-            // font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
-              // font-family: serif !important;
-            // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
-            // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
-            // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
-            } 
-
-          }
-      
-
-          #teamLogoGama {
-            margin: 0px;
-            padding-top: 10px;
-            padding: 0px;
-            width: 43vw;
-          }
+            padding-bottom: 30px;
 
 
-          #identitySpaceBeetweenLogoAndText {
-            height: 30px;
-          }
+                
+            display: flex;
+            position: relative;
+            padding: 0;
+            width: 100%;
+            height: 100%;
 
-          .identityComponentTitle {
-            font-size: 1.5rem;
-            color: #1e2757;
-            letter-spacing: 3px;
-          }
 
-          hr {
-            padding: 0px 0px 22px 0px;
-            margin: 0px 30px;
-          }
+            #canvas {
 
-      }
+              display: block;
+              position: absolute;
+              // top: 0;
+              // left: 0;
+              // width: 100%;
+              height: 100%;
+              width: 100%;
+              // background: rgba(255, 255, 255, 0.8); // Fondo translúcido o con textura
+              z-index: 1; // Capa base del lienzo
+
+              background: url('../../../../assets/img/identity-bg.png'); 
+              // background-size: cover;
+              // border-radius: 12px;
+              // box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.2); // Sombra para dar efecto de flotación
+              // border: 2px solid rgba(255, 255, 255, 0.6);
+              // backdrop-filter: blur(10px); // Efecto de vidrio esmerilado
+              // opacity: 0.2; //Reduce la opacidad al 80%
+              
+              // @media only screen and (max-width: 1060px) {
+              //   width: 90%;
+              // }
+
+              // @media only screen and (max-width: 777px) {
+              //   width: 40%;
+              // }
+
+              // @media only screen and (max-width: 594px) {
+              //   width: 90%;
+              // }
+            } //end canvas
+
+            #canvasContainer {
+                // position: absolute;
+                // display: block;
+                // display: flex;
+                // position: relative;
+                display: block;
+                width: 100%;
+                height: 100%;
+                z-index: 2;
+
+                  #identityRow {
+
+                      // display: flex;
+
+                      #significadoGAMA {
+
+                          padding-left: 5%;
+                          // z-index: 2; 
+
+                          #identityTitleFirstLine {
+                            font-size: 1.5rem;
+                            color: #1e2757;
+                            letter-spacing: 0px;
+                            margin: 0 auto;
+                            padding-bottom: 8px;
+                            margin-bottom: 10px;
+                            
+                            
+                          // font-weight: normal;
+                          // font-family: YesevaOne-Regula !important;
+                          // font-family: Arial, Helvetica, sans-serif !important;
+                                // font-family: monospace !important;
+                          // font-family: cursive !important;
+                          // font-family: OpenSans-Regular !important;
+                          // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important; //***** uppercase
+                          // font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+                            // font-family: serif !important;
+                          // font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+                          // font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important; 
+                          // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important;
+                          } 
+
+                      }
+                      
+
+                      #teamLogoGama {
+                        margin: 0px;
+                        padding-top: 10px;
+                        padding: 0px;
+                        width: 43vw;
+                        
+                      }
+
+
+                      #identitySpaceBeetweenLogoAndText {
+                        height: 30px;
+                      }
+
+
+                      .identityComponent {
+                        // background-color: white;
+                      }
+                  
+
+                      .identityComponentTitle {
+                        font-size: 1.5rem;
+                        color: #1e2757;
+                        letter-spacing: 3px;
+                      }
+
+                      hr {
+                        padding: 0px 0px 22px 0px;
+                        margin: 0px 30px;
+                      }
+
+                  } //end logoAndComponentRow
+                
+            } // end canvasContainer
+
+      } //end row
 
   } //end identity  
   
